--- a/packages/@mcbe/store/package.json
+++ b/packages/@mcbe/store/package.json
@@ -1,28 +1,30 @@
 {
-    "name": "@mcbe/store",
-    "version": "1.0.13",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
-    "license": "ISC",
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/karikera/mcbe_modules"
-    },
-    "dependencies": {
-      "krchecktimer": "^1.0.0",
-      "@mcbe/dummy-console": "^1.0.0",
-      "@mcbe/timer": "^1.0.0",
-      "@mcbe/scoreboard": "^1.0.0",
-      "@mcbe/command": "^1.0.0",
-      "@mcbe/event_server": "^1.0.0"
-    },
-    "peerDependencies": {
-      "@mcbe/identifier": "^1.0.0"
-    }
+  "name": "@mcbe/store",
+  "version": "1.0.13",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/karikera/mcbe_modules"
+  },
+  "dependencies": {
+    "krchecktimer": "^1.0.0",
+    "@mcbe/dummy-console": "^1.0.0",
+    "@mcbe/timer": "^1.0.0",
+    "@mcbe/scoreboard": "^1.0.0",
+    "@mcbe/command": "^1.0.0",
+    "@mcbe/event_server": "^1.0.0"
+  },
+  "peerDependencies": {
+    "@mcbe/identifier": "1.x"
+  },
+  "devDependencies": {
+    "@mcbe/identifier": "^1.0.0"
   }
-  
+}
