--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,20 +8,20 @@
             "type": "node",
             "request": "launch",
             "name": "Test",
-            "program": "${workspaceFolder}\\tool\\publish.js"
+            "program": "${workspaceFolder}\\packages\\tool\\publish.js"
         },
         {
             "type": "node",
             "request": "launch",
             "name": "Generate ID",
-            "program": "${workspaceFolder}\\tool\\generate.js",
+            "program": "${workspaceFolder}\\packages\\tool\\generate.js",
             "args": ["gen_id"]
         },
         {
             "type": "node",
             "request": "launch",
             "name": "Generate Lang",
-            "program": "${workspaceFolder}\\tool\\generate.js",
+            "program": "${workspaceFolder}\\packages\\tool\\generate.js",
             "args": ["gen_lang"]
         }
     ]
