--- a/packages/@bdsx/block/package.json
+++ b/packages/@bdsx/block/package.json
@@ -7,18 +7,22 @@
     "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
     "license": "ISC",
     "repository": {
-      "type": "git",
-      "url": "https://github.com/karikera/mcbe_modules"
+        "type": "git",
+        "url": "https://github.com/karikera/mcbe_modules"
     },
     "dependencies": {
-        "@mcbe/ruakr_itemgroup": "^1.0.0",
-        "@mcbe/command": "^1.0.0",
-        "@mcbe/system_server": "^1.0.0",
         "@bdsx/position": "^1.0.0",
-        "krgeometry": "^1.0.0"        
+        "@mcbe/command": "^1.0.0",
+        "@mcbe/ruakr_itemgroup": "^1.0.0",
+        "@mcbe/system_server": "^1.0.0",
+        "krgeometry": "^1.0.0"
     },
     "peerDependencies": {
-      "@mcbe/identifier": "^1.0.0",
-      "bdsx": "1.x"
+        "@mcbe/identifier": "1.x",
+        "bdsx": "1.x"
+    },
+    "devDependencies": {
+        "@mcbe/identifier": "^1.0.0",
+        "bdsx": "^1.0.0"
     }
 }
