--- a/packages/@bdsx/logininfo-db/package.json
+++ b/packages/@bdsx/logininfo-db/package.json
@@ -1,19 +1,22 @@
 {
-    "name": "@bdsx/logininfo-db",
-    "version": "1.0.1",
-    "description": "records all login-infos to DB",
-    "main": "index.js",
-    "keywords": [],
-    "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
-    "license": "ISC",
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/karikera/mcbe_modules"
-    },
-    "dependencies": {
-      "@bdsx/logininfo":"^1.0.0"
-    },
-    "peerDependencies": {
-      "@bdsx/ruakr_db":"1.x"
-    }
+  "name": "@bdsx/logininfo-db",
+  "version": "1.0.1",
+  "description": "records all login-infos to DB",
+  "main": "index.js",
+  "keywords": [],
+  "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/karikera/mcbe_modules"
+  },
+  "dependencies": {
+    "@bdsx/logininfo": "^1.0.0"
+  },
+  "peerDependencies": {
+    "@bdsx/ruakr_db": "1.x"
+  },
+  "devDependencies": {
+    "@bdsx/ruakr_db": "^1.0.0"
+  }
 }
