--- a/packages/@bdsx/position/package.json
+++ b/packages/@bdsx/position/package.json
@@ -7,13 +7,16 @@
     "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
     "license": "ISC",
     "repository": {
-      "type": "git",
-      "url": "https://github.com/karikera/mcbe_modules"
+        "type": "git",
+        "url": "https://github.com/karikera/mcbe_modules"
     },
     "dependencies": {
         "krgeometry": "^1.0.0"
     },
     "peerDependencies": {
-      "bdsx": "1.x"
+        "bdsx": "1.x"
+    },
+    "devDependencies": {
+        "bdsx": "^1.0.0"
     }
 }
