--- a/packages/@bdsx/ruakr_logdb/package.json
+++ b/packages/@bdsx/ruakr_logdb/package.json
@@ -7,13 +7,16 @@
     "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
     "license": "ISC",
     "repository": {
-      "type": "git",
-      "url": "https://github.com/karikera/mcbe_modules"
+        "type": "git",
+        "url": "https://github.com/karikera/mcbe_modules"
     },
     "dependencies": {
         "@mcbe/ruakr_log": "^1.0.0"
     },
     "peerDependencies": {
-      "@bdsx/ruakr_db":"1.x"
+        "@bdsx/ruakr_db": "1.x"
+    },
+    "devDependencies": {
+        "@mcbe/ruakr_db": "^1.0.0"
     }
 }
