--- a/packages/@bdsx/ruakr_userlog/package.json
+++ b/packages/@bdsx/ruakr_userlog/package.json
@@ -1,30 +1,34 @@
 {
-    "name": "@bdsx/ruakr_userlog",
-    "version": "1.0.6",
-    "description": "Write logs about user with ruakr_log",
-    "main": "index.js",
-    "keywords": [],
-    "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
-    "license": "ISC",
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/karikera/mcbe_modules"
-    },
-    "dependencies": {
-      "@mcbe/ruakr_const": "^1.0.0",
-      "@mcbe/ruakr_log": "^1.0.0",
-      "@mcbe/ruakr_itemgroup": "^1.0.0",
-      "@bdsx/ruakr_user": "^1.0.0",
-      "@bdsx/block": "^1.0.0",
-      "@bdsx/position": "^1.0.0",
-      "@bdsx/logininfo": "^1.0.0",
+  "name": "@bdsx/ruakr_userlog",
+  "version": "1.0.6",
+  "description": "Write logs about user with ruakr_log",
+  "main": "index.js",
+  "keywords": [],
+  "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/karikera/mcbe_modules"
+  },
+  "dependencies": {
+    "@mcbe/ruakr_const": "^1.0.0",
+    "@mcbe/ruakr_log": "^1.0.0",
+    "@mcbe/ruakr_itemgroup": "^1.0.0",
+    "@bdsx/ruakr_user": "^1.0.0",
+    "@bdsx/block": "^1.0.0",
+    "@bdsx/position": "^1.0.0",
+    "@bdsx/logininfo": "^1.0.0",
+    "@mcbe/identifier": "^1.0.0",
+    "@mcbe/event_server": "^1.0.0",
+    "@mcbe/component": "^1.0.0",
+    "@mcbe/entity": "^1.0.0"
+  },
+  "peerDependencies": {
+    "@mcbe/identifier": "^1.x",
+    "bdsx": "1.x"
+  },
+  "devDependencies": {
       "@mcbe/identifier": "^1.0.0",
-      "@mcbe/event_server": "^1.0.0",
-      "@mcbe/component": "^1.0.0",
-      "@mcbe/entity": "^1.0.0"
-    },
-    "peerDependencies": {
-      "@mcbe/identifier": "^1.0.0",
-      "bdsx": "1.x"
-    }
+      "bdsx": "^1.0.0"
+  }
 }
