--- a/packages/@mcbe/entity/package.json
+++ b/packages/@mcbe/entity/package.json
@@ -7,8 +7,8 @@
     "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
     "license": "ISC",
     "repository": {
-      "type": "git",
-      "url": "https://github.com/karikera/mcbe_modules"
+        "type": "git",
+        "url": "https://github.com/karikera/mcbe_modules"
     },
     "dependencies": {
         "@mcbe/system_server": "^1.0.0",
@@ -20,6 +20,9 @@
         "krevent": "^1.0.0"
     },
     "peerDependencies": {
-      "@mcbe/identifier": "^1.0.0"
+        "@mcbe/identifier": "^1.x"
+    },
+    "devDependencies": {
+        "@mcbe/identifier": "^1.0.0"
     }
 }
