--- a/packages/@mcbe/recipe/package.json
+++ b/packages/@mcbe/recipe/package.json
@@ -1,23 +1,25 @@
 {
-    "name": "@mcbe/recipe",
-    "version": "1.1.8",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
-    "license": "ISC",
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/karikera/mcbe_modules"
-    },
-    "dependencies": {
-      "@mcbe/item": "^1.0.0"
-    },
-    "peerDependencies": {
+  "name": "@mcbe/recipe",
+  "version": "1.1.9",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/karikera/mcbe_modules"
+  },
+  "dependencies": {
+    "@mcbe/item": "^1.0.0"
+  },
+  "peerDependencies": {
+    "@mcbe/identifier": "1.x"
+  },
+  "devDependencies": {
       "@mcbe/identifier": "^1.0.0"
-    }
   }
-  
+}
