--- a/packages/@mcbe/system_client/package.json
+++ b/packages/@mcbe/system_client/package.json
@@ -15,5 +15,8 @@
   },
   "peerDependencies": {
     "@mcbe/system_shared": "1.x"
+  },
+  "devDependencies": {
+    "@mcbe/system_shared": "^1.0.0"
   }
 }
