--- a/packages/tool/package.json
+++ b/packages/tool/package.json
@@ -10,11 +10,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@mcbe/recipe": "^1.0.0",
+    "@mcbe/item": "^1.0.0",
     "@types/node": "^14.11.2",
     "minecraft-scripting-types-client": "^1.0.0",
     "minecraft-scripting-types-server": "^1.0.0",
     "node-html-parser": "^1.2.21",
-    "@mcbe/identifier": "^1.0.0",
-    "@mcbe/recipe": "^1.0.0"
+    "source-map-support": "^0.5.19"
+  },
+  "peerDependencies": {
+    "@mcbe/identifier": "^1.0.0"
+  },
+  "devDependencies": {
+    "@mcbe/identifier": "^1.0.0"
   }
 }
