--- a/packages/@bdsx/ruakr_db/package.json
+++ b/packages/@bdsx/ruakr_db/package.json
@@ -13,7 +13,5 @@
     "peerDependencies": {
         "bdsx": "1.x"
     },
-    "devDependencies": {
-        "bdsx": "^1.0.0"
-    }
+    "dependencies": {}
 }
