--- a/packages/@bdsx/logininfo-db/package.json
+++ b/packages/@bdsx/logininfo-db/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bdsx/logininfo-db",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "records all login-infos to DB",
   "main": "index.js",
   "keywords": [],
@@ -17,6 +17,6 @@
     "@bdsx/ruakr_db": "1.x"
   },
   "devDependencies": {
-    "@bdsx/ruakr_db": "^1.0.0"
+    "@bdsx/ruakr_db": "1.x"
   }
 }
