--- a/packages/@bdsx/ruakr_ban/package.json
+++ b/packages/@bdsx/ruakr_ban/package.json
@@ -11,23 +11,22 @@
         "url": "https://github.com/karikera/mcbe_modules"
     },
     "dependencies": {
-        "@mcbe/system_server": "^1.0.0",
-        "@mcbe/store": "^1.0.0",
-        "@mcbe/ruakr_log": "^1.0.0",
+        "@bdsx/block": "^1.0.0",
+        "@bdsx/logininfo-db": "^1.0.0",
+        "@bdsx/restoreblock": "^1.0.0",
+        "@bdsx/ruakr_user": "^1.0.0",
         "@mcbe/damper": "^1.0.0",
         "@mcbe/ruakr_itemgroup": "^1.0.0",
-        "krjsonwatcher": "^1.0.0",
-        "@bdsx/logininfo-db": "^1.0.0",
-        "@bdsx/ruakr_user": "^1.0.0",
-        "@bdsx/block": "^1.0.0",
-        "@bdsx/restoreblock": "^1.0.0"
+        "@mcbe/ruakr_log": "^1.0.0",
+        "@mcbe/store": "^1.0.0",
+        "@mcbe/system_server": "^1.0.0",
+        "krjsonwatcher": "^1.0.0"
     },
     "peerDependencies": {
         "@mcbe/identifier": "^1.x",
         "bdsx": "1.x"
     },
     "devDependencies": {
-        "@mcbe/identifier": "^1.0.0",
-        "bdsx": "^1.0.0"
+        "@mcbe/identifier": "^1.0.0"
     }
 }
