--- a/packages/@bdsx/ruakr_user/package.json
+++ b/packages/@bdsx/ruakr_user/package.json
@@ -11,28 +11,27 @@
         "url": "https://github.com/karikera/mcbe_modules"
     },
     "dependencies": {
-        "@mcbe/ruakr_const": "^1.0.4",
-        "krgeometry": "^1.0.0",
-        "@mcbe/ruakr_util": "^1.0.0",
-        "@mcbe/command": "^1.0.0",
-        "@mcbe/system_server": "^1.0.0",
         "@bdsx/block": "^1.0.0",
-        "@mcbe/store": "^1.0.0",
+        "@bdsx/logininfo": "^1.0.0",
+        "@bdsx/position": "^1.0.0",
+        "@mcbe/command": "^1.0.0",
+        "@mcbe/component": "^1.0.0",
+        "@mcbe/entity": "^1.0.0",
+        "@mcbe/event_server": "^1.0.0",
         "@mcbe/item": "^1.0.0",
         "@mcbe/nexttick": "^1.0.0",
-        "@mcbe/event_server": "^1.0.0",
-        "@mcbe/component": "^1.0.0",
+        "@mcbe/ruakr_const": "^1.0.4",
         "@mcbe/ruakr_itemgroup": "^1.0.0",
-        "@mcbe/entity": "^1.0.0",
-        "@bdsx/position": "^1.0.0",
-        "@bdsx/logininfo": "^1.0.0"
+        "@mcbe/ruakr_util": "^1.0.0",
+        "@mcbe/store": "^1.0.0",
+        "@mcbe/system_server": "^1.0.0",
+        "krgeometry": "^1.0.0"
     },
     "peerDependencies": {
         "@mcbe/identifier": "^1.x",
         "bdsx": "1.x"
     },
     "devDependencies": {
-        "@mcbe/identifier": "^1.0.0",
-        "bdsx": "^1.0.0"
+        "@mcbe/identifier": "^1.0.0"
     }
 }
