--- a/packages/@mcbe/command/package.json
+++ b/packages/@mcbe/command/package.json
@@ -14,15 +14,15 @@
     "url": "https://github.com/karikera/mcbe_modules"
   },
   "dependencies": {
-    "@mcbe/system_server": "^1.0.0",
     "@mcbe/lang": "^1.0.0",
-    "@mcbe/version": "^1.0.0",
-    "@mcbe/ruakr_const": "^1.0.0"
+    "@mcbe/ruakr_const": "^1.0.0",
+    "@mcbe/system_server": "^1.0.0",
+    "@mcbe/version": "^1.0.0"
   },
   "peerDependencies": {
     "@mcbe/identifier": "^1.x"
   },
   "devDependencies": {
-      "@mcbe/identifier": "^1.0.0"
+    "@mcbe/identifier": "^1.0.0"
   }
 }
