--- a/packages/@mcbe/entity/package.json
+++ b/packages/@mcbe/entity/package.json
@@ -11,13 +11,13 @@
         "url": "https://github.com/karikera/mcbe_modules"
     },
     "dependencies": {
-        "@mcbe/system_server": "^1.0.0",
         "@mcbe/component": "^1.0.0",
         "@mcbe/event_server": "^1.0.0",
         "@mcbe/nexttick": "^1.0.0",
+        "@mcbe/system_server": "^1.0.0",
         "krarraymap": "^1.0.1",
-        "krgeometry": "^1.0.0",
-        "krevent": "^1.0.0"
+        "krevent": "^1.0.0",
+        "krgeometry": "^1.0.0"
     },
     "peerDependencies": {
         "@mcbe/identifier": "^1.x"
