--- a/packages/@mcbe/farticker/package.json
+++ b/packages/@mcbe/farticker/package.json
@@ -14,19 +14,19 @@
     "url": "https://github.com/karikera/mcbe_modules"
   },
   "dependencies": {
-    "krchecktimer": "^1.0.0",
-    "krgeometry": "^1.0.0",
+    "@mcbe/command": "^1.0.0",
+    "@mcbe/event_server": "^1.0.0",
+    "@mcbe/lang": "^1.0.0",
+    "@mcbe/ruakr_const": "^1.0.0",
     "@mcbe/system_server": "^1.0.0",
     "@mcbe/timer": "^1.0.0",
-    "@mcbe/command": "^1.0.0",
-    "@mcbe/ruakr_const": "^1.0.0",
-    "@mcbe/event_server": "^1.0.0",
-    "@mcbe/lang": "^1.0.0"
+    "krchecktimer": "^1.0.0",
+    "krgeometry": "^1.0.0"
   },
   "peerDependencies": {
     "@mcbe/identifier": "1.x"
   },
   "devDependencies": {
-      "@mcbe/identifier": "^1.0.0"
+    "@mcbe/identifier": "^1.0.0"
   }
 }
