--- a/packages/@mcbe/item/package.json
+++ b/packages/@mcbe/item/package.json
@@ -17,6 +17,7 @@
     "@mcbe/identifier": "1.x"
   },
   "devDependencies": {
-      "@mcbe/identifier": "^1.0.0"
-  }
+    "@mcbe/identifier": "^1.0.0"
+  },
+  "dependencies": {}
 }
