--- a/packages/@mcbe/scoreboard/package.json
+++ b/packages/@mcbe/scoreboard/package.json
@@ -14,8 +14,8 @@
     "url": "https://github.com/karikera/mcbe_modules"
   },
   "dependencies": {
-    "@mcbe/system_server": "^1.0.0",
     "@mcbe/command": "^1.0.0",
-    "@mcbe/lang": "^1.0.0"
+    "@mcbe/lang": "^1.0.0",
+    "@mcbe/system_server": "^1.0.0"
   }
 }
