--- a/packages/@mcbe/version/package.json
+++ b/packages/@mcbe/version/package.json
@@ -10,8 +10,8 @@
   "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
   "license": "ISC",
   "dependencies": {
-    "krchecktimer": "^1.0.0",
+    "@mcbe/lang": "^1.0.0",
     "@mcbe/system_server": "^1.0.0",
-    "@mcbe/lang": "^1.0.0"
+    "krchecktimer": "^1.0.0"
   }
 }
