--- a/packages/krgeometry/package.json
+++ b/packages/krgeometry/package.json
@@ -12,5 +12,6 @@
   },
   "keywords": [],
   "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {}
 }
