--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,9 @@
         "module": "commonjs",
         "sourceMap": true,
         "declaration": true,
-        "lib": [
-            "es2017"
-        ],
         "target": "es2017"
     },
     "include": [
-        "packages/**/*",
-        "packages/tool/**/*"
+        "packages/**/*"
     ]
 }
