--- a/packages/@bdsx/block/package.json
+++ b/packages/@bdsx/block/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bdsx/block",
-    "version": "1.0.3",
+    "version": "2.0.1",
     "description": "classified block",
     "main": "index.js",
     "keywords": [],
@@ -11,17 +11,17 @@
         "url": "https://github.com/karikera/mcbe_modules"
     },
     "dependencies": {
-        "@bdsx/position": "^1.0.0",
-        "@mcbe/command": "^1.0.0",
-        "@mcbe/ruakr_itemgroup": "^1.0.0",
-        "@mcbe/system_server": "^1.0.0",
-        "krgeometry": "^1.0.0"
+        "@bdsx/position": "^2.0.1",
+        "@mcbe/command": "^2.0.1",
+        "@mcbe/ruakr_itemgroup": "^2.0.1",
+        "@mcbe/system_server": "^2.0.1",
+        "krgeometry": "^2.0.1"
     },
     "peerDependencies": {
         "@mcbe/identifier": "1.x",
         "bdsx": "1.x"
     },
     "devDependencies": {
-        "@mcbe/identifier": "^1.x"
+        "@mcbe/identifier": "^2.0.1"
     }
 }
