--- a/packages/@mcbe/system_server/package.json
+++ b/packages/@mcbe/system_server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mcbe/system_server",
-  "version": "1.0.4",
+  "version": "2.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,8 +18,7 @@
     "@mcbe/system_shared": "1.x"
   },
   "devDependencies": {
-    "@mcbe/system_shared": "^1.0.0",
-    "@mcbe/identifier": "^1.0.0"
-  },
-  "dependencies": {}
+    "@mcbe/identifier": "^2.0.1",
+    "@mcbe/system_shared": "^2.0.1"
+  }
 }
