--- a/packages/krchecktimer/package.json
+++ b/packages/krchecktimer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "krchecktimer",
-  "version": "1.0.2",
+  "version": "2.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,5 @@
   },
   "keywords": [],
   "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
-  "license": "ISC",
-  "dependencies": {}
+  "license": "ISC"
 }
