--- a/packages/tool/package.json
+++ b/packages/tool/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "private": true,
   "keywords": [],
   "author": "",
   "license": "ISC",
